force-app/main/default/objects/Booking_Segment__c/Booking_Segment__c.object-meta.xml
<CustomObject>
    <label>Booking Segment</label>
    <pluralLabel>Booking Segments</pluralLabel>
    <description>Individual flight legs within a booking, linking specific flights to travel dates and seat assignments.</description>
    <nameField>
        <label>Segment Number</label>
        <type>AutoNumber</type>
        <displayFormat>BS-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>