force-app/main/default/objects/Booking_Segment__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <description>The parent booking that this segment belongs to</description>
    <inlineHelpText>Select the booking that this flight segment is part of</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking Segments</relationshipLabel>
    <relationshipName>Booking_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>