force-app/main/default/objects/Booking_Segment__c/fields/Segment_Order__c.field-meta.xml
<CustomField>
    <fullName>Segment_Order__c</fullName>
    <label>Segment Order</label>
    <description>The sequence order of this segment in a multi-leg journey</description>
    <inlineHelpText>Enter 1 for first leg, 2 for second leg, etc.</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>