force-app/main/default/objects/Booking_Segment__c/fields/Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Date__c</fullName>
    <label>Travel Date</label>
    <description>The specific date this flight segment operates</description>
    <inlineHelpText>Enter the date this flight operates (e.g., March 19, 2026)</inlineHelpText>
    <type>Date</type>
    <required>true</required>
</CustomField>